dirty tricks to support java25 run tasks
Signed-off-by: MCTian-mi <35869948+MCTian-mi@users.noreply.github.com>